--- a/backendCCEP/pom.xml
+++ b/backendCCEP/pom.xml
@@ -82,6 +82,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>backendCCEP</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
