--- a/backendCCEP/dockerfile
+++ b/backendCCEP/dockerfile
@@ -7,7 +7,7 @@ RUN mvn clean package -DskipTests
 FROM eclipse-temurin:21
 
 WORKDIR /opt/app
-COPY --from=builder /app/target/books.jar books.jar
+COPY --from=builder /app/target/backendCCEP.jar backendCCEP.jar
 
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "books.jar"]
+ENTRYPOINT ["java", "-jar", "backendCCEP.jar"]
